fix: layout shift on filter active

--- a/src/components/Filters/styles.scss
+++ b/src/components/Filters/styles.scss
@@ -7,7 +7,6 @@
   width: 100%;
   padding: 1rem;
   gap: $spacing-32;
-  max-width: 400px;
 
   &__title {
     display: flex;
@@ -64,5 +63,13 @@
     &__input {
       color: $green !important;
     }
+
+    @media screen and (max-width: $medium) {
+      width: calc(100% - $spacing-10);
+    }
+  }
+
+  @media screen and (max-width: $medium) {
+    width: initial;
   }
 }
