--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -4,13 +4,24 @@
   display: grid;
   grid-template-rows: auto auto 1fr auto;
   height: 100vh;
+  overflow: hidden;
 
   &__items {
-    display: flex;
+    display: grid;
     justify-content: flex-start;
     align-items: flex-start;
+    grid-template-columns: minmax(300px, 1fr) 4fr;
     gap: $spacing-54;
+
     padding: 1rem;
+    height: calc(100vh - 230px);
+    overflow: auto;
+
+    @media screen and (max-width: $medium) {
+      grid-template-columns: 1fr;
+      grid-template-rows: auto auto;
+      gap: $spacing-20;
+    }
 
     &__cards {
       display: flex;
